# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,15 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import productsRouter from "./products";
 import cartRouter from "./cart";
+import authRouter from "./auth";
+import ordersRouter from "./orders";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(productsRouter);
 router.use(cartRouter);
+router.use(authRouter);
+router.use(ordersRouter);
 
 export default router;
